refactor react DocType
