# docs/openapi/pn-safestorage-internal-v1-api.yaml
@@ -75,6 +75,10 @@ paths:
             description: Not configured
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DocumentType' 
   
   '/safestorage/internal/v1/doctypes': 
     post:
