# src/main/java/it/pagopa/pnss/repositoryManager/rest/internal/DocTypeInternalApiController.java
@@ -1,8 +1,7 @@
 package it.pagopa.pnss.repositoryManager.rest.internal;
 
-import static org.springframework.http.HttpStatus.OK;
-
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
@@ -21,36 +20,30 @@ public class DocTypeInternalApiController implements DocTypeInternalApi {
 	@Override
     public Mono<ResponseEntity<DocumentType>> getDocType(String typeId,  final ServerWebExchange exchange) {
 
-    	DocumentType documentType = docTypesService.getDocType(typeId);
-    	return Mono.just(ResponseEntity.ok().body(documentType));
+    	return docTypesService.getDocType(typeId).map(x -> new ResponseEntity<>(x, HttpStatus.OK));
 
     }
 
 	@Override
     public Mono<ResponseEntity<DocumentType>> insertDocType(Mono<DocumentType> documentType,  final ServerWebExchange exchange) {
-
-    	return documentType.map(request -> {
-    		DocumentType documentTypeInserted = docTypesService.insertDocType(request);
-    		return ResponseEntity.ok().body(documentTypeInserted);
-    	});
+		
+		return documentType.flatMap(request -> docTypesService.insertDocType(request))
+							.map(x -> new ResponseEntity<>(x, HttpStatus.OK));
 
     }
     
 	@Override
     public Mono<ResponseEntity<DocumentType>> updateDocType(String typeId, Mono<DocumentType> documentType,  final ServerWebExchange exchange) {
 
-    	return documentType.map(request -> {
-    		DocumentType documentTypeInserted = docTypesService.updateDocType(typeId, request);
-    		return ResponseEntity.ok().body(documentTypeInserted);
-    	});
+		return documentType.flatMap(request -> docTypesService.updateDocType(typeId, request))
+				.map(x -> new ResponseEntity<>(x, HttpStatus.OK));
 
     }
 	
 	@Override
-    public Mono<ResponseEntity<Void>> deleteDocType(String typeId,  final ServerWebExchange exchange) {
+    public Mono<ResponseEntity<DocumentType>> deleteDocType(String typeId,  final ServerWebExchange exchange) {
 
-    	docTypesService.deleteDocType(typeId);
-    	return Mono.just(new ResponseEntity<>(OK));	
+		return docTypesService.deleteDocType(typeId).map(x -> new ResponseEntity<>(x, HttpStatus.OK));
 
     }
 
